button buttons complete

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
         <a href="">Contact</a>
       </div>
     </nav>
-
+    <header>
+      <img src="img/fun-bus.jpg" alt="">
+      <h2>Welcome To Fun Bus!</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, incidunt beatae optio voluptatem aut perspiciatis necessitatibus repudiandae est? Veniam harum ipsum voluptatibus dolorum a sequi, nesciunt ea excepturi aperiam beatae.</p>
+    </header>
     <div class="container home">
       <section class="content-section">
         <div class="text-content">
